--- a/webdata/apps.json
+++ b/webdata/apps.json
@@ -1,14 +1,17 @@
+[
+  {
+    "name": "UwUTools",
+    "fileExtension": "exe",
+    "exeName": "UwUTools.exe",
+    "run": "false",
+    "url": "salsanowfiles.work"
+  },
+  // ... all your other app entries ...
   {
     "name": "OBS Studio",
     "fileExtension": "zip",
     "exeName": "obs64.exe",
     "run": "false",
-    "url": "https://cdn-fastly.obsproject.com/downloads/OBS-Studio-32.0.4-Windows-x64.zip"
-  },
-  {
-    "name": "Prism Launcher",
-    "fileExtension": "zip",
-    "exeName": "PrismLauncher.exe",
-    "run": "false",
-    "url": "https://github.com/PrismLauncher/PrismLauncher/releases/download/9.4/PrismLauncher-Windows-MinGW-w64-Portable-9.4.zip"
+    "url": "cdn-fastly.obsproject.com"
   }
+]
