--- a/SalsaNOW/custom_apps.json
+++ b/SalsaNOW/custom_apps.json
@@ -14,6 +14,13 @@
     "url": "https://cdn-fastly.obsproject.com/downloads/OBS-Studio-32.0.4-Windows-x64.zip"
   },
   {
+    "name": "RobloxPlayerInstaller",
+    "fileExtension": "exe",
+    "exeName": "RobloxPlayerInstaller.exe",
+    "run": "false",
+    "url": "https://www.roblox.com/download/client?os=win"
+  },
+  {
     "name": "YourNewApp",
     "fileExtension": "zip",
     "exeName": "app.exe",
